k8s/pinponfel/minio/minio-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      restartPolicy: Always
      containers:
        - name: minio
          image: minio/minio
          imagePullPolicy: IfNotPresent
          args: ["server", "/data"]
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            # requests:
            #   cpu: 50m
            #   memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
          - name: minio-data
            mountPath: /data
      volumes:
      - name: minio-data
        persistentVolumeClaim:
         claimName: minio-pvc
