k8s/pinponfel/minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: web
  selector:
    app: minio
