k8s/pinponfel/minio/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls: 
  - hosts:
    - minio.felagonell.com
    secretName: minio-tls-secret
  rules:
  - host: minio.felagonell.com
    http:
      paths:
      - backend:
          serviceName: minio-svc
          servicePort: 9000
        path: /
